# cedit

./: Makefile.am  cedit.c  configure.ac
